--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,12 +2,14 @@
 name = "youtube-rag"
 version = "0.1.0"
 description = "Add your description here"
+authors = [
+    { name = "TanukiDong", email = "europazas@hotmail.com" }
+]
 dependencies = [
     "langchain-openai>=0.1.14",
     "azure-identity>=1.17.1",
     "python-dotenv>=1.0.1",
     "langchain>=0.2.6",
-    "whisper>=1.1.10",
     "pytube>=15.0.0",
     "openai-whisper>=20231117",
     "ffmpeg>=1.4",
@@ -17,7 +19,7 @@ dependencies = [
     "pytubefix>=6.5.1",
 ]
 readme = "README.md"
-requires-python = ">= 3.8"
+requires-python = ">= 3.12"
 
 [build-system]
 requires = ["hatchling"]
@@ -31,4 +33,4 @@ dev-dependencies = []
 allow-direct-references = true
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/rag"]
+packages = ["src/youtube_rag"]
